--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,12 @@ $main-color: #E3B873;
 $dark-bg: #131313;
 $white: #fff;
 
+$extra-large: 1200px;
+$large: 990px;
+$medium: 768px;
+$small: 500px;
+$extra-small: 375px;
+
 :root {
 	box-sizing: border-box;
 }
@@ -53,6 +59,12 @@ button {
 	background: $main-color;
 	border-radius: 2px;
 	cursor: pointer;
+	transition: color 0.3s;
+}
+
+button:hover,
+button:focus {
+	color: $dark-bg;
 }
 
 img {
@@ -112,6 +124,12 @@ img {
 		font-size: 14px;
 		line-height: 16px;
 		color: $white;
+		transition: color 0.3s;
+	}
+
+	&__link:hover,
+	&__link:focus {
+		color: $main-color;
 	}
 
 	&__link_current {
@@ -134,7 +152,11 @@ img {
 	padding: 11px 33px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: $extra-large) {
+	.header .container {
+		margin-left: 0;
+	}
+
 	.navigation {
 		justify-content: center;
 	}
@@ -149,11 +171,7 @@ img {
 	}
 }
 
-@media (max-width: 990px) {
-	.header .container {
-		margin-left: 0;
-	}
-
+@media (max-width: $large) {
 	.nav__list {
 		margin-left: 15px;
 	}
@@ -163,13 +181,13 @@ img {
 	}
 }
 
-@media (max-width: 500px) {
+@media (max-width: $small) {
 	.nav {
 		display: none;
 	}
 }
 
-@media (max-width: 375px) {
+@media (max-width: $extra-small) {
 	.navigation__button {
 		display: none;
 	}
@@ -183,6 +201,7 @@ img {
 		font-size: 12px;
 		line-height: 14px;
 		color: $white;
+		text-decoration: none;
 	}
 
 	.navigation__name {
@@ -192,5 +211,193 @@ img {
 
 	.navigation {
 		justify-content: space-between;
+		min-height: 57px;
+	}
+}
+
+.hero {
+	position: relative;
+	min-height: 707px;
+	background-color: $dark-bg;
+}
+
+.hero .container {
+	max-width: 100%;
+	padding: 0;
+	margin: 0;
+	display: flex;
+}
+
+.hero__left-line {
+	width: 82px;
+}
+
+.hero__link {
+	position: relative;
+	text-transform: uppercase;
+	font-size: 14px;
+	color: $main-color;
+	transform: rotate(90deg);
+	margin-top: 260px;
+	margin-left: 5px;
+}
+
+.hero__link::after {
+	content: "";
+	width: 2px;
+	height: 50px;
+	background-color: $main-color;
+	position: absolute;
+	top: -18px;
+	left: 112px;
+	transform: rotate(90deg);
+}
+
+.hero__wrapper {
+	width: 100%;
+	min-height: 707px;
+	background-image: url("./assets/images/hero-bg.png");
+	background-repeat: no-repeat;
+	background-position: top right;
+}
+
+.hero__main {
+	max-width: 515px;
+	margin-top: 185px;
+	margin-left: 60px;
+}
+
+.hero__header {
+	font-family: "YesevaOne";
+	font-style: normal;
+	font-weight: normal;
+	font-size: 40px;
+	line-height: 53px;
+	text-transform: uppercase;
+	color: $white;
+}
+
+.hero__span {
+	color: $main-color;
+}
+
+.hero__text {
+	margin-bottom: 40px;
+	font-family: "FuturaBookC";
+	font-size: 22px;
+	line-height: 30px;
+	color: $white;
+}
+
+.hero__button {
+	font-family: "FuturaDemiC";
+	font-size: 13px;
+	line-height: 15px;
+	text-align: center;
+	border: 0;
+	width: 207px;
+	height: 51px;
+	display: inline-block;
+}
+
+.hero__button ~ .hero__button {
+	margin-left: 20px;
+	border: 1px solid $white;
+	background-color: transparent;
+}
+
+.scroll-down {
+	position: absolute;
+	bottom: -50px;
+	width: 250px;
+	height: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: $dark-bg;
+}
+
+.button-scroll {
+	position: relative;
+	padding-right: 50px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-family: "YesevaOne";
+	font-style: normal;
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 19px;
+	text-transform: uppercase;
+	border: 0;
+	background-color :transparent;
+}
+
+.button-scroll:hover,
+.button-scroll:hover {
+	color: $main-color;
+}
+
+.button-scroll::before {
+	content: "";
+	width: 29px;
+	height: 29px;
+	border-radius: 50%;
+	border: 1.5px solid $main-color;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.button-scroll::after {
+	content: "";
+	width: 10px;
+	height: 7px;
+	background-image: url("./assets/images/down-arrow.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	position: absolute;
+	top: 11px;
+	right: 10px;
+}
+
+@media (max-width: $extra-large) {
+	.hero__left-line {
+		display: none;
+	}
+
+	.scroll-down {
+		bottom: 0;
+	}
+}
+
+@media (max-width: $large) {
+	.hero__main {
+		margin: 150px auto 0;
+	}
+
+	.scroll-down {
+		left: 50%;
+    transform: translateX(-50%);
+	}
+}
+
+@media (max-width: $medium) {
+	.hero__main {
+		margin-top: 100px;
+		max-width: 480px;
+	}
+
+	.hero__header {
+		font-size: 28px;
+		line-height: 38px;
+	}
+
+	.hero {
+		height: auto;
+	}
+
+	.hero__wrapper {
+		height: auto;
+		background-size: cover;
 	}
 }
