--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,6 @@ img {
 
 .hero {
   position: relative;
-  min-height: 707px;
   background-color: #131313;
 }
 
@@ -256,10 +255,10 @@ img {
 
 .hero__wrapper {
   width: 100%;
-  min-height: 707px;
   background-image: url("./assets/images/hero-bg.png");
   background-repeat: no-repeat;
   background-position: top right;
+  padding-bottom: 205px;
 }
 
 .hero__main {
@@ -396,12 +395,238 @@ img {
     font-size: 28px;
     line-height: 38px;
   }
-  .hero {
-    height: auto;
-  }
   .hero__wrapper {
-    height: auto;
     background-size: cover;
   }
+}
+
+@media (max-width: 500px) {
+  .hero__wrapper {
+    padding-bottom: 100px;
+    padding: 0 15px;
+    background-image: url("./assets/images/hero-bg-mobile.png");
+  }
+  .scroll-down {
+    display: none;
+  }
+  .hero__wrapper-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hero__button ~ .hero__button {
+    margin-left: 0;
+    margin-top: 25px;
+  }
+  .hero__button {
+    width: 100%;
+  }
+}
+
+@media (max-width: 375px) {
+  .hero__header {
+    font-size: 23px;
+    line-height: 132.83%;
+  }
+  .hero__text {
+    font-size: 18px;
+    line-height: 135.84%;
+  }
+  .hero__main {
+    margin-top: 85px;
+  }
+  .hero__wrapper {
+    padding-bottom: 75px;
+  }
+}
+
+.projects {
+  padding-top: 165px;
+  padding-bottom: 90px;
+  background-color: #131313;
+}
+
+.projects .container {
+  max-width: 100%;
+  margin-left: 90px;
+  margin-right: 0;
+  padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.projects__wrapper {
+  width: 35%;
+  margin-right: 50px;
+}
+
+.projects__header {
+  position: relative;
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 37px;
+  letter-spacing: -0.07em;
+  text-transform: uppercase;
+  color: #E3B873;
+}
+
+.projects__header::after {
+  content: "";
+  width: 92px;
+  height: 1px;
+  background-color: #E3B873;
+  position: absolute;
+  top: 55px;
+  left: 160px;
+}
+
+.projects__text {
+  margin-bottom: 35px;
+  font-family: "FuturaBookC";
+  font-size: 18px;
+  line-height: 29px;
+  color: #fff;
+}
+
+.projects__table {
+  width: 500px;
+  text-align: left;
+}
+
+.projects__table th {
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  color: #E3B873;
+  vertical-align: top;
+}
+
+.projects__table tr {
+  font-size: 15px;
+  line-height: 20px;
+  color: #fff;
+  vertical-align: top;
+}
+
+.projects__table tr:nth-child(2) {
+  height: 70px;
+}
+
+.projects__nav {
+  position: relative;
+  width: 64px;
+  padding: 0;
+  margin: 0;
+  margin-left: 65px;
+  margin-top: 80px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.projects__nav::before {
+  content: "";
+  width: 43px;
+  height: 14px;
+  background-image: url("./assets/images/projects-left-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  position: absolute;
+  top: 2px;
+  left: -72px;
+}
+
+.projects__nav::after {
+  content: "";
+  width: 43px;
+  height: 14px;
+  background-image: url("./assets/images/projects-right-arrow.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  position: absolute;
+  top: 2px;
+  right: -73px;
+}
+
+.projects__button {
+  padding: 0;
+  border: 0;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+.projects__button:hover:not(.projects__button_current), .projects__button:focus:not(.projects__button_current) {
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+  background-color: #E3B873;
+}
+
+.projects__button_current {
+  background-color: #fff;
+}
+
+.gallery {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.gallery__nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.gallery__nav .gallery__item:nth-child(2) {
+  margin-left: 60px;
+}
+
+.gallery__nav .gallery__item:last-child {
+  margin-left: 100px;
+}
+
+.gallery__link {
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0 7px #131313;
+          box-shadow: 0 7px #131313;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.gallery__link:hover, .gallery__link:focus {
+  color: #E3B873;
+  -webkit-box-shadow: 0 6px #131313, 0 7px #E3B873;
+          box-shadow: 0 6px #131313, 0 7px #E3B873;
+}
+
+.gallery__link_current {
+  color: #E3B873;
+  -webkit-box-shadow: 0 6px #131313, 0 7px #E3B873;
+          box-shadow: 0 6px #131313, 0 7px #E3B873;
 }
 /*# sourceMappingURL=styles.css.map */
