--- a/styles.scss
+++ b/styles.scss
@@ -83,6 +83,10 @@ img {
 	padding: 0 15px;
 }
 
+
+// Header start
+
+
 .header {
 	background-color: $dark-bg;
 }
@@ -215,9 +219,12 @@ img {
 	}
 }
 
+// Header end
+
+// Hero start
+
 .hero {
 	position: relative;
-	min-height: 707px;
 	background-color: $dark-bg;
 }
 
@@ -255,10 +262,10 @@ img {
 
 .hero__wrapper {
 	width: 100%;
-	min-height: 707px;
 	background-image: url("./assets/images/hero-bg.png");
 	background-repeat: no-repeat;
 	background-position: top right;
+	padding-bottom: 205px;
 }
 
 .hero__main {
@@ -392,12 +399,228 @@ img {
 		line-height: 38px;
 	}
 
-	.hero {
-		height: auto;
+	.hero__wrapper {
+		background-size: cover;
+	}
+}
+
+@media (max-width: $small) {
+	.hero__wrapper {
+		padding-bottom: 100px;
+		padding: 0 15px;
+		background-image: url("./assets/images/hero-bg-mobile.png");
+	}
+
+	.scroll-down {
+		display: none;
+	}
+
+	.hero__wrapper-btn {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.hero__button ~ .hero__button {
+		margin-left: 0;
+		margin-top: 25px;
+	}
+
+	.hero__button {
+		width: 100%;
+	}
+}
+
+@media (max-width: $extra-small) {
+	.hero__header {
+		font-size: 23px;
+		line-height: 132.83%;
+	}
+
+	.hero__text {
+		font-size: 18px;
+		line-height: 135.84%;
+	}
+
+	.hero__main {
+		margin-top: 85px;
 	}
 
 	.hero__wrapper {
-		height: auto;
-		background-size: cover;
+		padding-bottom: 75px;
+	}
+}
+
+// Hero end
+
+// Projects start
+
+.projects {
+	padding-top: 165px;
+	padding-bottom: 90px;
+	background-color: $dark-bg;
+	.container {
+		max-width: 100%;
+		margin-left: 90px;
+		margin-right: 0;
+		padding-right: 0;
+		display: flex;
+	}
+
+	&__wrapper {
+		width: 35%;
+		margin-right: 50px;
+	}
+
+	&__header {
+		position: relative;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 27px;
+		line-height: 37px;
+		letter-spacing: -0.07em;
+		text-transform: uppercase;
+		color: $main-color;
+	}
+
+	&__header::after {
+		content: "";
+		width: 92px;
+		height: 1px;
+		background-color: $main-color;
+		position: absolute;
+		top: 55px;
+    left: 160px;
+	}
+
+	&__text {
+		margin-bottom: 35px;
+		font-family: "FuturaBookC";
+		font-size: 18px;
+		line-height: 29px;
+		color: $white;
+	}
+
+	&__table {
+		width: 500px;
+		text-align: left;
+	}
+
+	&__table th {
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 25px;
+		text-transform: uppercase;
+		color: $main-color;
+		vertical-align: top;
+	}
+
+	&__table tr {
+		font-size: 15px;
+		line-height: 20px;
+		color: $white;
+		vertical-align: top;
+	}
+
+	&__table tr:nth-child(2) {
+		height: 70px;
+	}
+
+	&__nav {
+		position: relative;
+		width: 64px;
+		padding: 0;
+		margin: 0;
+		margin-left: 65px;
+		margin-top: 80px;
+		list-style: none;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__nav::before {
+		content: "";
+		width: 43px;
+		height: 14px;
+		background-image: url("./assets/images/projects-left-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+		position: absolute;
+		top: 2px;
+    left: -72px;
+	}
+
+	&__nav::after {
+		content: "";
+		width: 43px;
+		height: 14px;
+		background-image: url("./assets/images/projects-right-arrow.svg");
+		background-repeat: no-repeat;
+		background-position: 0 0;
+		position: absolute;
+		top: 2px;
+    right: -73px;
+	}
+
+	&__button {
+		padding: 0;
+		border: 0;
+		width: 10px;
+		height: 10px;
+		border-radius: 50%;
+		background-color: rgba(255, 255, 255, 0.3);
+	}
+
+	&__button:hover:not(.projects__button_current),
+	&__button:focus:not(.projects__button_current) {
+		transform: scale(1.4);
+	 	background-color: $main-color;
+	}
+
+	&__button_current {
+		background-color: $white;
+	}
+}
+
+.gallery {
+	flex-grow: 1;
+	&__nav {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		display: flex;
+	}
+
+	&__nav &__item:nth-child(2) {
+		margin-left: 60px;
+	}
+
+	&__nav &__item:last-child {
+		margin-left: 100px;
+	}
+
+	&__link {
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 14px;
+		line-height: 19px;
+		text-transform: uppercase;
+		color: rgba(255, 255, 255, 0.3);
+		box-shadow: 0 7px $dark-bg;
+		transition: all 0.3s;
+	}
+
+	&__link:hover,
+	&__link:focus {
+		color: $main-color;
+		box-shadow: 0 6px $dark-bg,0 7px $main-color;
+	}
+
+	&__link_current {
+		color: $main-color;
+		box-shadow: 0 6px $dark-bg,0 7px $main-color;
 	}
 }
