--- a/styles.scss
+++ b/styles.scss
@@ -877,3 +877,248 @@ button:focus {
 		margin-left: 0;
 	}
 }
+
+.control {
+	position: relative;
+	padding-bottom: 140px;
+	.container {
+		max-width: 818px;
+	}
+
+	&__header {
+		margin: 0;
+		margin-top: -1px;
+		margin-bottom: -1px;
+		padding-bottom: 10px;
+		background-color: $dark-bg;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 20px;
+		line-height: 28px;
+		text-align: center;
+		text-transform: uppercase;
+		color: $white;
+	}
+
+	&__camera-icon {
+		padding-bottom: 256px;
+		text-align: center;
+		background-color: $dark-bg;
+	}
+
+	&__lines {
+		display: inline-block;
+		position: relative;
+	}
+
+	&__lines::before {
+		content: "";
+		width: 32px;
+		height: 1.5px;
+		background-color: $main-color;
+		position: absolute;
+		top: 14px;
+    left: -43px;
+	}
+
+	&__lines::after {
+		content: "";
+		width: 32px;
+		height: 1.5px;
+		background-color: $main-color;
+		position: absolute;
+		top: 14px;
+    right: -42px;
+	}
+
+	&__video-wrapper {
+		position: absolute;
+		top: 98px;
+	}
+
+	&__text {
+		position: relative;
+		max-width: 680px;
+		margin: 0 auto;
+		margin-top: 302px;
+		margin-bottom: 90px;
+		font-family: FuturaBookC;
+		font-size: 20px;
+		line-height: 34px;
+		text-align: center;
+		color: $dark-bg;
+	}
+
+	&__text::before {
+		content: "";
+		width: 55px;
+		height: 2px;
+		background-color: $main-color;
+		position: absolute;
+		top: -34px;
+    left: calc(50% - 27.5px);
+	}
+}
+
+.communication {
+	margin-left: 20px;
+	display: flex;
+	flex-wrap: wrap;
+
+	&__block {
+		width: 230px;
+		margin-top: 0;
+		margin-bottom: 0;
+	}
+
+	&__block input {
+		width: 100%;
+		padding: 5px 0 7px;
+		border: 0;
+		border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+	}
+
+	&__block input::placeholder {
+		font-family: "FuturaBookC";
+		font-size: 18px;
+		line-height: 24px;
+		color: $dark-bg;
+	}
+
+	&__block + &__block {
+		margin-left: 55px;
+	}
+
+	&__button {
+		width: 200px;
+		margin-left: 50px;
+		border: 0;
+	}
+
+	&__label {
+		display: block;
+		font-family: FuturaBookC;
+		font-size: 15px;
+		line-height: 20px;
+		color: rgba(54, 54, 54, 0.5);
+	}
+
+	&__checkbox {
+		margin-top: 33px;
+		margin-left: 50%;
+		transform: translateX(-50%);
+		font-family: "FuturaBookC";
+		font-size: 16px;
+		line-height: 22px;
+		color: #181818;
+	}
+}
+
+@media (max-width: 880px) {
+	.control {
+		&__video-wrapper {
+			left: calc(50%);
+    	transform: translateX(-50%);
+		}
+
+		iframe {
+			width: 470px;
+			height: 260px;
+		}
+
+		&__text {
+			margin-top: 120px;
+		}
+	}
+
+	.communication {
+		margin: 0 auto;
+		max-width: 600px;
+		
+		&__block {
+			width: 90%;
+			margin: 0 auto;
+		}
+
+		&__block + &__block {
+			margin: 0 auto;
+		}
+
+		&__button {
+			width: 70%;
+			padding: 10px 0;
+			margin-top: 15px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+}
+
+@media (max-width: $small) {
+	.control {
+		padding-bottom: 0;
+		background-color: $dark-bg;
+
+		&__header {
+			padding-bottom: 15px;
+			font-size: 22px;
+			line-height: 138.6%;
+		}
+
+		iframe {
+			width: 340px;
+			height: 190px;
+		}
+
+		&__video-wrapper {
+			top: 115px;
+		}
+
+		&__text {
+			margin-top: 45px;
+			margin-bottom: 50px;
+			font-size: 14px;
+			line-height: 169.8%;
+			color: $white;
+		}
+	}
+
+	.communication{
+
+		&__label {
+			font-size: 15px;
+			line-height: 20px;
+			color: rgba(255, 255, 255, 0.5);
+		}
+	
+		&__block input {
+			background-color: $dark-bg;
+		}
+
+		&__block + &__block {
+			margin-top: 50px;
+			margin-bottom: 25px;
+		}
+
+		&__block input::placeholder {
+			font-size: 18px;
+			line-height: 138.72%;
+			color: $white;
+		}
+
+		&__checkbox {
+			color: $white;
+			margin: 0;
+			margin-bottom: 55px;
+			width: 100%;
+			transform: translateX(0);
+			text-align: center;
+		}
+
+		&__button {
+			order: 1;
+			margin-bottom: -17px;
+		}
+	}
+}
