--- a/styles.scss
+++ b/styles.scss
@@ -1020,9 +1020,11 @@ button:focus {
 
 @media (max-width: 880px) {
 	.control {
+		padding-bottom: 30px;
+
 		&__video-wrapper {
 			left: calc(50%);
-    	transform: translateX(-50%);
+			transform: translateX(-50%);
 		}
 
 		iframe {
@@ -1199,7 +1201,7 @@ button:focus {
 		padding-top: 20px;
 		padding-left: 35px;
 		padding-bottom: 55px;
-		width: 330px;
+		width: 85%;
 		margin: 0 auto;
 		transform: translateY(-120px);
 		background-color: $white;
@@ -1260,5 +1262,56 @@ button:focus {
 }
 
 @media (max-width: 1020px) {
+	.repair {
+		&__list {
+			justify-content: center;
+		}
 
+		&__item {
+			width: 60%;
+		}
+
+		&__item + &__item {
+			margin-left: 0;
+		}
+	}
+}
+
+@media (max-width: 870px) {
+	.repair__item {
+		width: 80%;
+	}
+}
+
+@media (max-width: $small) {
+	.repair__item {
+		width: 90%;
+	}
+}
+
+@media (max-width: $extra-small) {
+	.repair {
+
+		&__item {
+			width: 100%;
+			height: 550px;
+		}
+
+		&__list-wrapper {
+			margin-left: 0;
+			padding-bottom: 22px;
+			transform: translateY(-143px);
+		}
+
+		&__sublist li {
+			font-size: 13px;
+		}
+
+		&__button {
+			width: 190px;
+			height: 40px;
+			font-size: 15px;
+			transform: translateY(-162px);
+		}
+	}
 }
