--- a/styles.scss
+++ b/styles.scss
@@ -1315,3 +1315,147 @@ button:focus {
 		}
 	}
 }
+
+//End Repair
+// Start Measurement
+
+.measurement {
+	.container {
+		max-width: 100%;
+		padding-left: 0;
+		margin-left: 0;
+		margin-right: 85px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	&__image img {
+		display: block;
+    width: 100%;
+	}
+
+	&__wrapper {
+		width: 37%;
+		margin-left: auto;
+    margin-top: 110px;
+	}
+
+	&__form {
+		position: relative;
+		padding-bottom: 25px;
+		background-color: $dark-bg;
+	}
+
+	&__block {
+		width: 80%;
+		margin: 0 auto;
+		margin-top: 40px;
+	}
+
+	&__legend {
+		display: block;
+		padding-top: 20px;
+		font-family: "FuturaDemiC";
+		font-size: 20px;
+		line-height: 25px;
+		text-align: center;
+		color: $white;
+	}
+
+	&__label {
+		display: block;
+		font-size: 15px;
+		line-height: 20px;
+		color: rgba(255, 255, 255, 0.5);
+	}
+
+	&__input {
+		width: 100%;
+		padding: 7px 0;
+		border: 0;
+		border-bottom:1px solid rgba(255, 255, 255, 0.15);
+		background-color: $dark-bg;
+	}
+
+	&__input::placeholder {
+		font-size: 18px;
+		line-height: 25px;
+		color: $white;
+	}
+
+	&__checkbox {
+		width: 80%;
+		margin: 0 auto;
+		margin-top: 15px;
+		margin-bottom: 40px;
+		font-size: 16px;
+		line-height: 22px;
+		color: $white;
+	}
+
+	&__button {
+		width: 213px;
+		height: 51px;
+		display: block;
+		margin-left: auto;
+		margin-right: 10%;
+		font-size: 13px;
+		line-height: 18px;
+		text-align: center;
+		text-transform: uppercase;
+		border: 0;
+		padding: 0;
+	}
+
+	&__text {
+		position: relative;
+		margin-top: 40px;
+		padding-left: 125px;
+		font-family: "FuturaDemiC";
+		font-size: 20px;
+		line-height: 25px;
+		color: $main-color;
+	}
+
+	&__text::before {
+		content: "";
+    width: 74px;
+    height: 74px;
+    position: absolute;
+    top: -12px;
+    left: 25px;
+    background-image: url("/assets/images/measurement-icon.svg");
+    background-repeat: no-repeat;
+    background-position: center -10px;
+
+	}
+}
+
+@media (max-width: 1364px) {
+	.measurement {
+		.container {
+			margin: 0 auto;
+			padding-left: 15px;
+			padding-right: 15px;
+			justify-content: center;
+		}
+
+		&__wrapper {
+			width: 60%;
+			margin-left: 0;
+		}
+	}
+}
+
+@media (max-width: $medium) {
+	.measurement__wrapper {
+		width: 90%;
+		margin-top: 40px;
+	}
+}
+
+@media (max-width: $extra-small) {
+	.measurement {
+		display: none;
+	}
+}
