--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@
   src: url("./assets/fonts/YesevaOne.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: "Proximanova";
+  src: url("./assets/fonts/Proximanova.woff2") format("woff2");
+}
+
 :root {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1471,6 +1476,223 @@ button:focus {
 @media (max-width: 375px) {
   .measurement {
     display: none;
+  }
+}
+
+.collection {
+  position: relative;
+  min-height: 864px;
+  margin-top: 240px;
+  margin-bottom: 100px;
+  background-color: #131313;
+  background-image: url("./assets/images/collection-bg.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.collection__wrapper-header {
+  width: 35%;
+  padding-top: 130px;
+}
+
+.collection__header {
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 37px;
+  text-transform: uppercase;
+  color: #E3B873;
+}
+
+.collection__list {
+  font-family: "Proximanova";
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.collection__list li + li {
+  margin-top: 14px;
+}
+
+.collection__link {
+  font-size: 20px;
+  line-height: 34px;
+  color: #fff;
+  border-bottom: 1px solid transparent;
+}
+
+.collection__link_is-active {
+  color: #E3B873;
+  border-bottom: 1px solid #E3B873;
+}
+
+.collection__link:hover, .collection__link:focus {
+  color: #E3B873;
+  border-bottom: 1px solid #E3B873;
+}
+
+.collection__wrapper-gallery {
+  position: absolute;
+  top: -112px;
+  right: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.collection__first-list, .collection__second-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.collection__second-list {
+  margin-left: 40px;
+}
+
+.collection__first-list__item:first-child {
+  padding-top: 70px;
+  margin-bottom: 40px;
+}
+
+.collection__second-list__item:first-child {
+  margin-bottom: 36px;
+}
+
+.collection__button-left, .collection__button-right {
+  display: none;
+}
+
+.current-slider {
+  display: none;
+}
+
+@media (max-width: 1270px) {
+  .collection__wrapper-gallery {
+    right: 15px;
+  }
+}
+
+@media (max-width: 1070px) {
+  .collection {
+    min-height: auto;
+    margin-top: 40px;
+    margin-bottom: 0;
+    padding-bottom: 30px;
+  }
+  .collection .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .collection__header {
+    font-size: 24px;
+  }
+  .collection__first-list__item, .collection__second-list {
+    display: none;
+  }
+  .collection__wrapper-gallery {
+    position: relative;
+    margin-top: 330px;
+  }
+  .collection__wrapper-header {
+    padding-top: 0;
+  }
+  .collection__button-left, .collection__button-right {
+    display: block;
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    border: 0;
+    border-radius: 50%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .collection__button-right {
+    background-image: url("./assets/images/gallery-photo-arrow-rigth-desk.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    right: 5%;
+  }
+  .collection__button-left {
+    background-image: url("./assets/images/arrow-slider-left-desk.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    left: 5%;
+  }
+  .current-slider {
+    display: block;
+  }
+  .current-slider img {
+    max-width: 600px;
+    height: auto;
+  }
+}
+
+@media (max-width: 880px) {
+  .collection .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .collection__wrapper-header {
+    width: 100%;
+    text-align: center;
+  }
+  .collection__list {
+    display: none;
+  }
+  .collection__wrapper-gallery {
+    width: 90%;
+    margin-top: 0;
+    top: 0;
+    right: 0;
+  }
+  .collection__first-list img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .collection {
+    background-image: none;
+  }
+}
+
+@media (max-width: 375px) {
+  .collection {
+    background-color: transparent;
+    margin-top: 0;
+  }
+  .collection__wrapper-gallery {
+    width: 100%;
+  }
+  .collection__header {
+    margin-top: 0;
+  }
+  .collection__button-left {
+    width: 36px;
+    height: 36px;
+    background-image: url("./assets/images/gallery-arrow-prev.svg");
+    background-repeat: no-repeat;
+    background-position: 12px center;
+  }
+  .collection__button-right {
+    width: 36px;
+    height: 36px;
+    position: absolute;
+    background-image: url("./assets/images/gallery-arrow-next-mob.svg");
   }
 }
 /*# sourceMappingURL=styles.css.map */
