--- a/styles.scss
+++ b/styles.scss
@@ -86,6 +86,35 @@ button:focus {
 	padding: 0 15px;
 }
 
+.header-icon {
+	text-align: center;
+}
+
+.header__lines {
+	display: inline-block;
+	position: relative;
+}
+
+.header__lines::before {
+	content: "";
+	width: 32px;
+	height: 1.5px;
+	background-color: $main-color;
+	position: absolute;
+	top: 14px;
+	left: -43px;
+}
+
+.header__lines::after {
+	content: "";
+	width: 32px;
+	height: 1.5px;
+	background-color: $main-color;
+	position: absolute;
+	top: 14px;
+	right: -42px;
+}
+
 
 // Header start
 
@@ -1696,5 +1725,33 @@ button:focus {
 			position: absolute;
 			background-image: url("./assets/images/gallery-arrow-next-mob.svg");
 		}
+	}
+}
+
+
+// Collection end
+// Design start
+
+.design {
+	.header-icon {
+		margin-bottom: 8px;
+	}
+
+	&__text {
+		width: 60%;
+		margin: 0 auto;
+		font-family: "FuturaBookC";
+		font-size: 20px;
+		line-height: 27px;
+		text-align: center;
+		color: #363636;
+	}
+
+	&__list {
+		margin: 0;
+		padding: 0;
+		list-style: none;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
 	}
 }
