--- a/styles.css
+++ b/styles.css
@@ -1328,6 +1328,9 @@ button:focus {
 }
 
 @media (max-width: 375px) {
+  .repair {
+    padding-bottom: 60px;
+  }
   .repair__item {
     width: 100%;
     height: 550px;
@@ -1703,6 +1706,12 @@ button:focus {
   .collection {
     background-color: transparent;
     margin-top: 0;
+    padding-bottom: 0;
+    position: relative;
+  }
+  .collection .container {
+    position: absolute;
+    top: -66px;
   }
   .collection__wrapper-gallery {
     width: 100%;
@@ -1725,13 +1734,17 @@ button:focus {
   }
 }
 
+.design {
+  margin-top: 150px;
+}
+
 .design .header-icon {
   margin-bottom: 8px;
 }
 
 .design__text {
   width: 60%;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   font-family: "FuturaBookC";
   font-size: 20px;
   line-height: 27px;
@@ -1743,9 +1756,184 @@ button:focus {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.design__item {
+  position: relative;
+}
+
+.design__list-wrapper {
+  padding-top: 20px;
+  padding-left: 35px;
+  padding-bottom: 55px;
+  width: 81%;
+  margin: 0 auto;
+  position: absolute;
+  top: 295px;
+  left: 35px;
+  background-color: #fff;
+  -webkit-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.23);
+          box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.23);
+}
+
+.design__list-header {
+  margin: 0;
+  margin-bottom: 10px;
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  color: #363636;
+}
+
+.design__sublist {
+  margin: 0;
+  padding: 0 0 0 12px;
+  list-style: none;
+}
+
+.design__sublist li {
+  position: relative;
+  font-family: "FuturaBookC";
+  font-size: 15px;
+  line-height: 25px;
+  color: #959595;
+}
+
+.design__sublist li::before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  position: absolute;
+  top: 10px;
+  left: -11px;
+  border-radius: 50%;
+  background-color: #959595;
+}
+
+.design__button {
+  width: 228px;
+  height: 54px;
+  padding-left: 33px;
+  font-family: "YesevaOne";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  text-align: left;
+  color: #fff;
+  border: 0;
+  position: absolute;
+  bottom: -27px;
+  left: 0;
+}
+
+@media (max-width: 1222px) {
+  .design__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .design__item {
+    width: 55%;
+  }
+  .design__item img {
+    display: block;
+    width: 100%;
+  }
+  .design__list-wrapper {
+    width: 80%;
+    top: 70%;
+  }
+  .design__item:first-child {
+    margin-bottom: 50px;
+  }
+  .design__item:nth-child(2) {
+    margin-bottom: 145px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .design__item {
+    width: 70%;
+  }
+}
+
+@media (max-width: 890px) {
+  .design__button {
+    position: static;
+  }
+  .design__list-wrapper {
+    padding-bottom: 10px;
+    top: 60%;
+  }
+}
+
+@media (max-width: 610px) {
+  .design__item {
+    width: 100%;
+  }
+}
+
+@media (max-width: 610px) {
+  .design__list-wrapper {
+    top: 50%;
+  }
+}
+
+@media (max-width: 375px) {
+  .design {
+    padding-top: 170px;
+    background-color: #131313;
+  }
+  .design .header-section {
+    font-size: 22px;
+    line-height: 138.6%;
+    color: #fff;
+  }
+  .design .header-icon {
+    margin-bottom: 16px;
+  }
+  .design__text {
+    width: 100%;
+    font-size: 15px;
+    line-height: 135.84%;
+    color: #fff;
+  }
+  .design__list-wrapper {
+    top: 61%;
+    left: 0;
+    padding: 15px 0 22px 30px;
+  }
+  .design__button {
+    width: 190px;
+    height: 40px;
+    font-size: 15px;
+    position: absolute;
+    bottom: -20px;
+  }
+  .design__item:first-child {
+    margin-bottom: 110px;
+  }
+  .design__item:nth-child(2) {
+    margin-bottom: 175px;
+  }
+  .design .mobile-hidden {
+    display: none;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
