--- a/styles.scss
+++ b/styles.scss
@@ -1325,6 +1325,7 @@ button:focus {
 
 @media (max-width: $extra-small) {
 	.repair {
+		padding-bottom: 60px;
 
 		&__item {
 			width: 100%;
@@ -1703,6 +1704,14 @@ button:focus {
 	.collection {
 		background-color: transparent;
 		margin-top: 0;
+		padding-bottom: 0;
+		position: relative;
+
+		.container {
+			position: absolute;
+   		top: -66px;
+		}
+
 		&__wrapper-gallery {
 			width: 100%;
 		}
@@ -1733,13 +1742,15 @@ button:focus {
 // Design start
 
 .design {
+	margin-top: 150px;
+
 	.header-icon {
 		margin-bottom: 8px;
 	}
 
 	&__text {
 		width: 60%;
-		margin: 0 auto;
+		margin: 0 auto 40px;
 		font-family: "FuturaBookC";
 		font-size: 20px;
 		line-height: 27px;
@@ -1751,7 +1762,187 @@ button:focus {
 		margin: 0;
 		padding: 0;
 		list-style: none;
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__item {
+		position: relative;
+	}
+
+	&__list-wrapper {
+		padding-top: 20px;
+		padding-left: 35px;
+		padding-bottom: 55px;
+		width: 81%;
+		margin: 0 auto;
+		position: absolute;
+		top: 295px;
+		left: 35px;
+		background-color: $white;
+		box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.23);
+	}
+
+	&__list-header {
+		margin: 0;
+		margin-bottom: 10px;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 25px;
+		color: #363636;
+	}
+
+	&__sublist {
+		margin: 0;
+		padding: 0 0 0 12px;
+		list-style: none;
+	}
+
+	&__sublist li {
+		position: relative;
+		font-family: "FuturaBookC";
+		font-size: 15px;
+		line-height: 25px;
+		color: #959595;
+	}
+
+	&__sublist li::before {
+		content: "";
+		width: 4px;
+		height: 4px;
+		position: absolute;
+		top: 10px;
+    left: -11px;
+		border-radius: 50%;
+		background-color: #959595;
+	}
+
+	&__button {
+		width: 228px;
+		height: 54px;
+		padding-left: 33px;
+		font-family: "YesevaOne";
+		font-style: normal;
+		font-weight: normal;
+		font-size: 18px;
+		line-height: 25px;
+		text-transform: uppercase;
+		text-align: left;
+		color: $white;
+		border: 0;
+		position: absolute;
+		bottom: -27px;
+    left: 0;
+	}
+}
+
+@media (max-width: 1222px) {
+	.design__list {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.design__item {
+		width: 55%;
+	}
+
+	.design__item img {
+		display: block;
+		width: 100%;
+	}
+
+	.design__list-wrapper {
+		width: 80%;
+		top: 70%;
+	}
+
+	.design__item:first-child {
+		margin-bottom: 50px;
+	}
+
+	.design__item:nth-child(2) {
+		margin-bottom: 145px;
+	}
+}
+
+@media (max-width: 1140px) {
+	.design__item {
+		width: 70%;
+	}
+}
+
+@media (max-width: 890px) {
+	.design__button {
+		position: static;
+	}
+
+	.design__list-wrapper {
+		padding-bottom: 10px;
+		top: 60%;
+	}
+}
+
+@media (max-width: 610px) {
+	.design__item {
+		width: 100%;
+	}
+}
+
+@media (max-width: 610px) {
+	.design__list-wrapper {
+		top: 50%;
+	}
+}
+
+@media (max-width: 375px) {
+	.design {
+		padding-top: 170px;
+		background-color: $dark-bg;
+
+		.header-section {
+			font-size: 22px;
+			line-height: 138.6%;
+			color: $white;
+		}
+
+		.header-icon {
+			margin-bottom: 16px;
+		}
+
+		&__text {
+			width: 100%;
+			font-size: 15px;
+			line-height: 135.84%;
+			color: $white;
+		}
+
+		&__list-wrapper {
+			top: 61%;
+			left: 0;
+			padding: 15px 0 22px 30px;
+		}
+
+		&__button {
+			width: 190px;
+			height: 40px;
+			font-size: 15px;
+			position: absolute;
+    	bottom: -20px;
+		}
+
+		&__item:first-child {
+			margin-bottom: 110px;
+		}
+
+		&__item:nth-child(2) {
+			margin-bottom: 175px;
+		}
+
+		.mobile-hidden {
+			display: none;
+		}
 	}
 }
